feat: 페이지별 리다이렉트 설정

--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -345,7 +345,7 @@
                     body: formData2
                 }).then(()=>{
                     alert('숙소 등록이 완료되었습니다.');
-                    window.location.href = '/';
+                    location.replace(`/management/myAccommodations`)
                 });
 
 
