--- a/src/main/resources/templates/accommodation-update.html
+++ b/src/main/resources/templates/accommodation-update.html
@@ -190,7 +190,7 @@
                 // headers:{'Content-Type' : 'multipart/form-data'},
                 body: formData2
               }).then(()=>{
-                alert('숙소 등록이 완료되었습니다.');
+                alert('숙소 수정이 완료되었습니다.');
                 // //TODO: 어디로 보내지
                 // window.location.href = '/';
               });
@@ -199,7 +199,7 @@
             })
             .catch(error => {
               console.error('Error:', error);
-              alert('숙소 등록 중 오류가 발생하였습니다. 입력한 정보를 확인해 주세요');
+              alert('숙소 수정 중 오류가 발생하였습니다. 입력하신 정보가 잘못된 형식이거나 여러번 요청을 반복하실 수 없습니다');
             });
   });
 </script>
