--- a/src/main/resources/templates/room-update.html
+++ b/src/main/resources/templates/room-update.html
@@ -94,6 +94,8 @@
 
         const formData = new FormData(this);
 
+        const accommodationId = [[${room.accommodationId}]]
+
         // // 입력된 값을 가져옴
         // const facilityAdd = document.getElementById('facilityAdd').value;
         // // 쉼표를 기준으로 문자열을 분할하여 배열로 변환
@@ -143,7 +145,7 @@
                 }
                 // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
                 alert('객실 수정 완료되었습니다.');
-                window.location.href = '/';
+                location.replace(`/accommodation/${accommodationId}`)
             })
             .catch(error => {
                 console.error('Error:', error);
