feat: 예약승인 받아야만 후기 등록

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -312,6 +312,7 @@
             </div>
         </div>
         <div class="text-center">
+            <p>예약 승인을 받은 후에 리뷰 작성이 가능합니다.</p>
             <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:href="@{${accommodation.getId()} +'/comment'}">리뷰
                 등록</a>
         </div>
