--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -53,7 +53,7 @@
                                     <div class="border rounded p-3">
                                         <div class="container pb-0">
                                             <div class="img-container">
-                                                <img alt="Image"
+                                                <img alt="등록된 이미지가 없습니다"
                                                      class="img-fluid w-35 mx-auto rounded d-block"
                                                      th:src="${accommodation.getImageUrl()}">
                                             </div>
