fix : details.html

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -312,7 +312,7 @@
             </div>
         </div>
         <div class="text-center">
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:href="@{${accommodation.getId()} +'/comment'}"  th:if="${reservation?.getId()}">리뷰 등록</a>
+            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:href="@{${accommodation.getId()} +'/comment'}"  th:unless="${reservation}">리뷰 등록</a>
         </div>
     </div>
 </div>
